<resources>

    <string name="app_name">ShoppingMallApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">공지사항</string>
    <string name="menu_send">문의사항</string>

    <string name="title_garage">garage main image</string>

    <!-- 새로 정의한 네비게이션 메뉴 부분 -->
    <string name="menu_main">main</string>
    <string name="menu_outer">201Garage Introduction</string>
    <string name="menu_top">프리미엄 세차</string>
    <string name="menu_bottom">디테일링 세차</string>
    <string name="menu_shoes">실내 집중 클리닝</string>
    <string name="menu_full">풀 디테일링 세차</string>

    <string name="before_sign_in">Sign in here!</string>

    <!-- 스피너 옵션들 -->
    <string name="country_prompt">옵션선택</string>
    <string-array name="country_arrays">
        <item>선택</item>
        <item>프리미엄 세차 1회권 (40000원)</item>
        <item>프리미엄 세차 10회권 (360000원)</item>
    </string-array>

    <string name="country_prompt_d">옵션선택</string>
    <string-array name="country_arrays_d">
        <item>선택</item>
        <item>디테일링 세차 1회권 (100000원)</item>
        <item>디테일링 세차 10회권 (900000원)</item>
    </string-array>

    <string name="country_prompt_i">옵션선택</string>
    <string-array name="country_arrays_i">
        <item>선택</item>
        <item>실내 집중 클리닝 1회권 (120000원)</item>
        <item>실내 집중 클리닝 10회권 (1080000원)</item>
    </string-array>

    <string name="country_prompt_f">옵션선택</string>
    <string-array name="country_arrays_f">
        <item>선택</item>
        <item>풀 디테일링 1회권 (180000원)</item>
        <item>풀 디테일링 10회권 (1620000원)</item>
    </string-array>

</resources>
