<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_outer"
            android:icon="@drawable/intro"
            android:title="@string/menu_outer" />
    </group>

    <item android:title="Product">
        <menu>
        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/clean1"
            android:title="@string/menu_top" />
        <item
            android:id="@+id/nav_bottom"
            android:icon="@drawable/clean2"
            android:title="@string/menu_bottom" />
        <item
            android:id="@+id/nav_shoes"
            android:icon="@drawable/clean3"
            android:title="@string/menu_shoes" />
            <item
                android:id="@+id/nav_full"
                android:icon="@drawable/clean4"
                android:title="@string/menu_full" />

        </menu>
    </item>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/notice"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/question"
                android:title="문의사항" />
        </menu>
    </item>

</menu>
