<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <!-- 메인 프레그먼트로 이용하지만 activity_main_drawer에 등록 안하면 네비게이션 메뉴에 뜨지 않음 -->
    <fragment
        android:id="@+id/nav_main"
        android:name="org.techtown.push.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_outer"
        android:name="org.techtown.push.ui.outer.OuterFragment"
        android:label="@string/menu_outer"
        tools:layout="@layout/fragment_outer" />

    <fragment
        android:id="@+id/nav_top"
        android:name="org.techtown.push.ui.top.TopFragment"
        android:label="@string/menu_top"
        tools:layout="@layout/fragment_top" >
        <action
            android:id="@+id/action_nav_top_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_top_to_nav_buy"
            app:destination="@id/nav_buy" />
    </fragment>

    <fragment
        android:id="@+id/nav_bottom"
        android:name="org.techtown.push.ui.bottom.BottomFragment"
        android:label="@string/menu_bottom"
        tools:layout="@layout/fragment_bottom" >
        <action
            android:id="@+id/action_nav_bottom_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_bottom_to_nav_buy"
            app:destination="@id/nav_buy" />
    </fragment>

    <fragment
        android:id="@+id/nav_shoes"
        android:name="org.techtown.push.ui.shoes.ShoesFragment"
        android:label="@string/menu_shoes"
        tools:layout="@layout/fragment_shoes" >
        <action
            android:id="@+id/action_nav_shoes_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_shoes_to_nav_buy"
            app:destination="@id/nav_buy" />
    </fragment>

    <fragment
        android:id="@+id/nav_full"
        android:name="org.techtown.push.ui.full.FullFragment"
        tools:layout="@layout/fragment_full" >
        <action
            android:id="@+id/action_nav_full_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_full_to_nav_buy"
            app:destination="@id/nav_buy" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="org.techtown.push.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="org.techtown.push.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="org.techtown.push.ui.cart.CartFragment"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_buy"
        android:name="org.techtown.push.ui.buy.BuyFragment"
        tools:layout="@layout/fragment_buy" />





</navigation>